<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Conexion_PHP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_borrar">Borrar</string>
    <string name="tituloborrar">Eliminar Registro</string>
    <string name="titulo">Titulo</string>
    <string name="tituloprin">\"Base de datos \'Libros\'\"</string>
    <string name="title_activity_consulta">Consulta</string>
    <string name="autor">"Autor : "</string>
    <string name="editorial">Editorial :</string>
    <string name="ano">Año de Edicion :</string>
    <string name="guardar">Guardar</string>

</resources>
